# 3d-engine

./: .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: AApplication.h  CCamera.h  CMesh.h  CModel.h  CShader.h  CTexture.h
Engine/include/Modules/: AModule.h  CModuleInput.h  CModuleRender.h  CModuleTime.h  CModuleWindow.h
Engine/include/glad/: glad.h
Engine/lib/assimp/: CMakeCache.txt  Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  revision.h
Engine/lib/assimp/code/: Makefile  cmake_install.cmake
Engine/lib/assimp/contrib/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Engine/lib/assimp/test/: Makefile  cmake_install.cmake
Engine/lib/assimp/test/headercheck/: Makefile  cmake_install.cmake
Engine/src/: AApplication.cpp  CCamera.cpp  CMesh.cpp  CModel.cpp  CShader.cpp  CTexture.cpp
Engine/src/Modules/: CModuleInput.cpp  CModuleRender.cpp  CModuleTime.cpp  CModuleWindow.cpp
GUI/: CMakeLists.txt
GUI/include/: CApplication.h
GUI/include/Modules/: CModuleEditorCamera.h
GUI/src/: CApplication.cpp  main.cpp
GUI/src/Modules/: CModuleEditorCamera.cpp
src/: main.cpp
src/glad/: glad.c
